# LIGM

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml
configs/: retrieval-probe.yaml  smoke-8k-random.yaml  smoke-ligm.yaml  smoke-online-ligm.yaml  smoke-online-random.yaml  smoke-online-stop.yaml  smoke-random.yaml  smoke-resume-continue.yaml  smoke-resume-full.yaml  smoke-resume-start.yaml  smoke-stage3-weighted.yaml  smoke-stage4-red.yaml  smoke-stage5-na-red.yaml  smoke-stage6-af-red.yaml  snapshot.yaml  stage1-entropy.yaml  stage1-ligm-gain.yaml  stage1-ligm.yaml  stage1-random.yaml  stage2-online-ligm.yaml  stage2-online-random.yaml  stage3-ligm-weighted4.yaml  stage3-ligm-weighted8.yaml  stage3-random-long.yaml  stage4-random-10m.yaml  stage4-red-full-10m.yaml  stage4-red-route-10m.yaml  stage5-na-red-10m.yaml  stage6-af-red-10m.yaml
manifests/: ettin-snapshot.aria2.txt  ettin-snapshot.json  modernbert-base.json
results/: base-natural.json  base-synthetic.json  ligm-natural.json  ligm-synthetic.json  mechanism-gate.json  random-natural.json  random-synthetic.json  training-summary.json
scripts/: build_hf_release.sh  continue_stage2_ligm.sh  download_retrieval.sh  evaluate_stage1.sh  evaluate_stage2_milestones.sh  migrate_legacy_mds_checkpoint.py  publish_hf.sh  remote_copy.py  remote_exec.py  run_stage1.sh  run_stage1_conditionals.sh  run_stage3_weighted_screen.sh  run_stage4_red_screen.sh  run_stage5_na_red.sh  run_stage6_af_red.sh  verify_hf_release.sh  verify_resume.py
tests/: test_attention.py  test_bootstrap.py  test_checkpoint.py  test_data.py  (+18 more)
(+25 files in other folders)
